# tts_webui_extension.gpt_sovits

./: README.md  pyproject.toml  setup.py
extension_gpt_sovits/: gradio_app.py  main.py
tts_webui_extension/gpt_sovits/: gradio_app.py  main.py
